--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Tests\Vehicules\Service\VehiculeServiceTest:
+        public: true
+
+    App\Tests\Maintenances\Service\MaintenanceServiceTest:
+        public: true
