--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,7 +1,7 @@
 nelmio_api_doc:
   areas: # to filter documented areas
     path_patterns:
-      - ^/api(?!/docs$) # Accepts routes under /api except /api/doc
+      - ^/api(?!/docs$) # Accepts routes under /api except /api/docs
     host_patterns: # document only routes with a host of the form api.*
       - ^api\.
   documentation:
@@ -10,11 +10,13 @@ nelmio_api_doc:
       description: This api is provided by Maintain your car !
       version: 1.0.0
     servers:
-      - url: http://localhost:8080/api
+      - url: http://localhost:8080
         description: Local
     tags:
       - name: vehicules
         description: Vehicules management
+      - name: maintenances
+        description: Maintenances management
     paths:
       /vehicules:
         get:
@@ -30,6 +32,12 @@ nelmio_api_doc:
                 application/json:
                   schema:
                     $ref: '#/components/schemas/VehiculesSuccess'
+            '404':
+              description: Entity not found
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/NotFound'
       /vehicule/create:
         post:
           tags:
@@ -144,6 +152,167 @@ nelmio_api_doc:
                 application/json:
                   schema:
                     $ref: '#/components/schemas/NotFound'
+      /vehicule/{id}/maintenances:
+        get:
+          tags:
+            - maintenances
+          parameters:
+            - in: path
+              name: id
+              required: true
+              schema:
+                type: integer
+          summary: Maintenance collection get
+          security:
+            - bearerAuth: [ ]
+          responses:
+            '200':
+              description: Successful operation
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/MaintenancesSuccess'
+            '404':
+              description: Entity not found
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/NotFound'
+      /vehicule/{id}/maintenance/create:
+        post:
+          tags:
+            - maintenances
+          parameters:
+            - in: path
+              name: id
+              required: true
+              schema:
+                type: integer
+          summary: Maintenance item create
+          requestBody:
+            content:
+              'application/json':
+                schema:
+                  $ref: '#/components/schemas/MaintenancesRequestBody'
+          security:
+            - bearerAuth: [ ]
+          responses:
+            '200':
+              description: Successful operation
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/MaintenancesSuccess'
+            '400':
+              description: Bad Request
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/InvalidRequest'
+      /vehicule/{vid}/maintenance/{mid}:
+        get:
+          tags:
+            - maintenances
+          parameters:
+            - in: path
+              name: vid
+              required: true
+              schema:
+                type: integer
+            - in: path
+              name: mid
+              required: true
+              schema:
+                type: integer
+          summary: Maintenance item get
+          security:
+            - bearerAuth: [ ]
+          responses:
+            '200':
+              description: Successful operation
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/MaintenancesSuccess'
+            '404':
+              description: Entity not found
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/NotFound'
+      /vehicule/{vid}/maintenance/{mid}/update:
+        put:
+          tags:
+            - maintenances
+          parameters:
+            - in: path
+              name: vid
+              required: true
+              schema:
+                type: integer
+            - in: path
+              name: mid
+              required: true
+              schema:
+                type: integer
+          requestBody:
+            content:
+              'application/json':
+                schema:
+                  $ref: '#/components/schemas/MaintenancesRequestBody'
+          summary: Maintenance item update
+          security:
+            - bearerAuth: [ ]
+          responses:
+            '200':
+              description: Successful operation
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/MaintenancesSuccess'
+            '404':
+              description: Entity not found
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/NotFound'
+            '400':
+              description: Unauthorized
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/InvalidRequest'
+      /vehicule/{vid}/maintenance/{mid}/delete:
+        delete:
+          tags:
+            - maintenances
+          parameters:
+            - in: path
+              name: vid
+              required: true
+              schema:
+                type: integer
+            - in: path
+              name: mid
+              required: true
+              schema:
+                type: integer
+          summary: Maintenance item delete
+          security:
+            - bearerAuth: [ ]
+          responses:
+            '200':
+              description: Successful operation
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/MaintenancesSuccess'
+            '404':
+              description: Entity not found
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/NotFound'
     components:
       securitySchemes:
         bearerAuth:
@@ -208,6 +377,20 @@ nelmio_api_doc:
                   type: array
                   items:
                     $ref: '#/components/schemas/Vehicules'
+        MaintenancesSuccess:
+          type: object
+          properties:
+            status:
+              type: integer
+              description: Code http response
+              example: 200
+            data:
+              type: object
+              properties:
+                vehicules:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Maintenances'
         Vehicules:
           type: object
           properties:
@@ -276,4 +459,70 @@ nelmio_api_doc:
             - reference
             - identification
             - modelyear
+            - createdAt
+        Maintenances:
+          type: object
+          properties:
+            id:
+              type: integer
+              example: 12345
+            type:
+              type: string
+              example: "repair"
+            date:
+              type: string
+              example: "2022-08-08T17:12:40+00:00"
+            amount:
+              type: float
+              example: 199.90
+            description:
+              type: text
+              example: Vehicule repair description...
+            createdAt:
+              type: string
+              example: "2022-08-08T17:12:40+00:00"
+            updatedAt:
+              type: string
+              example: "2022-08-08T17:12:40+00:00"
+            vehicule:
+              type: object
+              example: {
+                "id": 12345
+              }
+        MaintenancesRequestBody:
+          type: object
+          properties:
+            id:
+              type: integer
+              description: maintenance id
+              example: 12345
+            type:
+              type: string
+              description: maintenance type (maintenance, repair, restoration)
+              example: "repair"
+            date:
+              type: string
+              description: day of the maintenance (format => 'Y-m-d')
+              example: "2022-08-08"
+            amount:
+              type: float
+              description: maintenance amount
+              example: 199.90
+            description:
+              type: text
+              description: maintenance description
+              example: Vehicule repair description...
+            createdAt:
+              type: string
+              description: creation date of the instance of maintenance object
+              example: "2022-08-08T17:12:40+00:00"
+            updatedAt:
+              type: string
+              description: update date of the instance of maintenance object
+              example: "2022-08-08T17:12:40+00:00"
+          required:
+            - type
+            - date
+            - amount
+            - description
             - createdAt
