MYC-6/ Auth jwt

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,9 @@
 APP_ENV=dev
 APP_SECRET=78d3664a88aecb0713720954fa99cca5
 DATABASE_URL="mysql://root:secret@mysql:3306/mycar"
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=62000dc2fc9afdcfc1eec5690b2f006d
+###< lexik/jwt-authentication-bundle ###
