--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -10,7 +10,7 @@ nelmio_api_doc:
       description: This api is provided by Maintain your car !
       version: 1.0.0
     servers:
-      - url: http://localhost:8080
+      - url: http://localhost:8080/api
         description: Local
     tags:
       - name: vehicules
