--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -16,10 +16,12 @@ services:
     container_name: mycar_nginx
     image: nginx:stable-alpine
     ports:
-      - "8080:80"
+      - "80:80"
+      - "443:443"
     volumes:
       - .:/var/www/app
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx:/etc/nginx/certs
     depends_on:
       - php
     networks:
@@ -36,7 +38,6 @@ services:
     restart: always # always restart unless stopped manually
     environment:
       MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: mycar
     networks:
       - app
 
