--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,13 +1,32 @@
 server {
-
     listen 80;
-    index index.php;
-    server_name localhost;
+    server_name mycar.local;
     root /var/www/app/public;
+    index index.php;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name mycar.local;
+    root /var/www/app/public;
+    index index.php;
+
+    ssl_certificate /etc/nginx/certs/mycar.cert.pem;
+    ssl_certificate_key /etc/nginx/certs/mycar.key.pem;
+    ssl_protocols TLSv1.2;
+
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 
     location / {
+        proxy_buffering off;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+
+        proxy_pass http://mycar.local;
         try_files $uri /index.php$is_args$args;
     }
 
