--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,8 +1,22 @@
 server {
-    listen 80;
-    server_name mycar.local;
-    root /var/www/app/public;
-    index index.php;
+   listen 80 default_server;
+   listen [::]:80 default_server;
+
+   server_name _;
+
+   return 301 https://mycar.local$request_uri;
+}
+
+server {
+    listen 443 default_server;
+    listen [::]:443 default_server;
+
+    server_name _;
+
+    ssl_certificate /etc/nginx/certs/mycar.cert.pem;
+    ssl_certificate_key /etc/nginx/certs/mycar.key.pem;
+
+    return 301 https://mycar.local$request_uri;
 }
 
 server {
@@ -13,20 +27,10 @@ server {
     root /var/www/app/public;
     index index.php;
 
-    ssl_certificate /etc/nginx/certs/mycar.cert.pem;
-    ssl_certificate_key /etc/nginx/certs/mycar.key.pem;
-    ssl_protocols TLSv1.2;
-
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 
     location / {
-        proxy_buffering off;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-
-        proxy_pass http://mycar.local;
         try_files $uri /index.php$is_args$args;
     }
 
